# libvinput.py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  tests.py  update_binaries.py
vinput/: __init__.py  _binding.py
vinput/lib/: libvinput.dylib
