[build-system]
requires = ['setuptools>=42', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'vinput'
version = '0.6.1'
description = 'Python bindings for the libvinput library'
readme = 'README.md'

license = { text = 'AGPLv3' }
authors = [
	{ name = 'Slendi', email = 'slendi@socopon.com' }
]
dependencies = []

[project.urls]
Homepage = 'https://github.com/xslendix/libvinput.py'

[tool.setuptools]
packages = ['vinput']

[tool.setuptools.package-data]
vinput = ['vinput/lib/*.dat']

